--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<!-- Reveal.js core CSS -->
 	<link rel="stylesheet" href="dist/reveal.css">
 	<link rel="stylesheet" href="dist/theme/moon.css" id="theme">
+	<link rel="stylesheet" href="custom.css">
+
 
 	<!-- Highlight.js (for code highlighting) -->
 	<link rel="stylesheet" href="plugin/highlight/monokai.css">
@@ -20,8 +22,12 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
-			<section data-markdown="slides.md" data-separator="^---$" data-separator-vertical="^--$"
-				data-separator-notes="^Note:" data-charset="utf-8">
+			<section 
+				data-markdown="slides.md"
+				data-separator="^---$"
+				data-separator-vertical="^--$"
+				data-separator-notes="^Note:"
+				data-charset="utf-8">
 			</section>
 		</div>
 	</div>
